--- a/stylesheets/partials/_poolsolo.scss
+++ b/stylesheets/partials/_poolsolo.scss
@@ -26,8 +26,10 @@ width: 100%;}
   .bxslider {
     margin: 0% 25% 0% 10%;
     padding: 0% 10% 0% 5%;
+    li {margin: 0px 10px;}
     img{
-    height: 300px;
+    max-height: 300px;
+
   }
   }
   .bx-pager {
@@ -140,4 +142,27 @@ width: 100%;}
       transform: scale(1.2);
     }
   }
+}
+@media (min-width: 481px) and (max-width: 780px) {
+  .poolcontainer .poolfacts {
+    width:90%;
+    float: none;
+    margin: 10% 5%;}
+
+  .poolcontainer .poolimgsolo {
+    margin: 0% 2.5% 0% 5%;
+    width:100%;
+    float: none;}
+
+}
+@media (min-width: 380px) and (max-width: 480px) {
+  .poolcontainer .poolfacts {
+    width:90%;
+    float: none;
+    margin: 15% 5%;}
+
+  .poolcontainer .poolimgsolo {
+    margin: 0%;
+    width:90%;
+    float: none;}
 }
