--- a/stylesheets/partials/_pools.scss
+++ b/stylesheets/partials/_pools.scss
@@ -32,7 +32,7 @@ padding: 0px 25px 25px;}
 .map {
   width: 50%;
   float: left;
-  padding-left: 10%;
+  padding: 0% 10% 15%;
 iframe{
   width:90%;
   height: 300px;
@@ -140,8 +140,9 @@ iframe{
 }
 @media (min-width: 320px) and (max-width: 480px) {
 
-  .mapandkey h2, h3, p{
-    font-size: .8em;
+  #mapandkey h2, h3, p{
+    font-size: 1em;
+    padding-top: 25px;
   }
   .headerimg {
     height: 80px;
@@ -150,11 +151,11 @@ iframe{
   .map {
     width: 90%;
     float: none;
-    padding: 5%;
-  iframe{
+  iframe {
     width:90%;
     height: 250px;
   }
+
   }
   #region .regionimg {
     width: 90%;
