--- a/stylesheets/partials/_training.scss
+++ b/stylesheets/partials/_training.scss
@@ -9,19 +9,13 @@ $displayfont: 'Merriweather', serif;
 .trainingpage {
   background-image: url("../images/bblbglt.png");
 background-size: contain;
-h1, h2 {
-text-align: center;
-padding-bottom: 10px;}
-
- p{
-   line-height: 1.8;}
 }
 
 
 
 #lap101 {
   background: white;
-  padding: 0px 50px 25px;
+  padding: 0px 50px 40px;
   box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
 
@@ -37,10 +31,11 @@ padding-bottom: 10px;}
   }
 
 ul {
+  -webkit-padding-start: 15px;
+  padding-top: 25px;
   list-style: none;
 }
 h3 {text-align: left;
-line-height: 1px;
   color: $selected;}
 
 li {
@@ -49,9 +44,13 @@ li {
 }
 
   #workouts {
+    img {
+      height: 100px;
+        padding-top: 25px;
+    }
 
     background: white;
-    padding: 25px 50px 25px;
+    padding: 25px 50px 75px;
     margin-top: 50px;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -76,12 +75,13 @@ li {
 
   #technique {
     background: white;
-    padding: 25px 25px 25px;
+    padding: 25px 25px 75px;
     margin-top: 50px;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
     text-align: center;
-    img {
-      height: 80px;
+    .whistleimg {
+      padding-top: 25px;
+      height: 100px;
     }
     .techniquecontainer {
       overflow: hidden;
@@ -89,14 +89,14 @@ li {
       margin-top: 50px;
       #videos {
         float: left;
-        padding: 10px 0px 50px;
+        padding: 10px 0px 0px;
         width: 50%;
         h2 {padding-bottom: 25px;}
       }
         #books{
           float: right;
-          width: 40%;
-          margin: 0% 2% 0% 0%;
+          width: 50%;
+          margin: 0%;
 
            h2 {
              padding: 10px 0px 25px;
@@ -106,22 +106,24 @@ li {
            margin: 0px;}
 
       .bookimg {
+        img { height: 100px;
+        padding-right: 10px}
         float: left;
         clear: both;
-        padding:0px 10px 10px;
+        padding:0px;
       }
       .bookinfo {
         h3{
         text-align: left;}
         p {
           text-align: left;
-          padding-bottom: 28px;}
+          padding-bottom: 50px;}
       }
     }
 }
 
   #other {
-
+    padding: 25px 25px 0px;
     clear: both;
     margin: 0 none;
    h2, h3, p {
@@ -131,8 +133,6 @@ li {
       list-style: none;
       h3 {
         color: $selected;
-        margin: 0px;
-        padding: 0px
       }
 
      a:hover {
@@ -141,7 +141,7 @@ li {
     }
   }
   }
-@media (min-width: 481px) and (max-width: 780px) {
+@media (min-width: 481px) and (max-width: 850px) {
   #workouts .workoutcontainer{
     text-align: center;
     display: block;
@@ -162,6 +162,11 @@ li {
 }
 @media (min-width: 380px) and (max-width: 480px) {
 #lap101 {padding-top: 50px;}
+#lap101 ul {
+  padding: 0px;
+}
+#lap101 li {
+    padding-bottom: 0px;}
 
   #technique .techniquecontainer #videos {
     float: none;
