--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -146,9 +146,11 @@ background-size: contain;
 text-align: center;
 
 .heromain {
-  background-image: url("../images/barton.jpg");
-  background-size: cover;
-  height: 600px;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-image: url("../images/bsprings.jpg");
+  background-position: 25% 70%;
+  background-size:cover;
+  height: 800px;
   text-align: center;
   padding: 150px 50px;
 
@@ -174,7 +176,7 @@ text-align: center;
   p {
     font-size: 1.1em;
     color: #333333;
-    padding: 0% 10% 2%;
+    padding: 0% 10% 0%;
   }
 
     ul {
@@ -182,6 +184,7 @@ text-align: center;
     -webkit-padding-start: 0px;
       list-style: none;
       margin: 0px;
+      padding-bottom: 25px;
     }
     li {
       display: inline;
