committing slider edits

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import "partials/pools";
 @import "partials/poolsolo";
 @import "partials/training";
+@import "partials/practice";
 
 $primary-color: #4da6fa;
 $accent-color: #89e3ee;
