--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -214,16 +214,6 @@
   clear: both;
   padding: 5% 0%;
   border-bottom: 1px solid grey; }
-  .poolcontainer .bxslider {
-    margin: 0% 25% 0% 10%;
-    padding: 0% 10% 0% 5%; }
-    .poolcontainer .bxslider li {
-      margin: 0px 10px; }
-    .poolcontainer .bxslider img {
-      max-height: 300px; }
-  .poolcontainer .bx-pager {
-    margin-right: 50px;
-    height: 100px; }
   .poolcontainer .poolimgsolo {
     float: left;
     width: 45%;
@@ -268,7 +258,7 @@
     margin-bottom: 25px; }
   .poolcontainer .poolfacts {
     width: 45%;
-    float: left;
+    float: right;
     padding-right: 2.5%; }
     .poolcontainer .poolfacts a {
       font-family: "Merriweather", serif;
@@ -279,16 +269,13 @@
     .poolcontainer .poolfacts .poolfacts::after {
       clear: both; }
     .poolcontainer .poolfacts .pooltext h2 {
-      margin-top: 0px; }
+      margin: 20px 0px 10px; }
     .poolcontainer .poolfacts .pooltext {
+      margin: 2.5% 5% 0% 2.5%;
       text-align: left;
       padding: 0 2.5%; }
-    .poolcontainer .poolfacts p {
-      padding: 0px; }
-    .poolcontainer .poolfacts h2 {
-      padding: 0px 0px 0px; }
   .poolcontainer .sharecontainer {
-    padding: 4% 2%; }
+    padding-top: 5%; }
     .poolcontainer .sharecontainer a.return {
       text-align: left;
       float: left; }
@@ -309,11 +296,21 @@
     .poolcontainer .sharecontainer img:hover {
       transform: scale(1.2); }
 
+@media (min-width: 781px) and (max-width: 1100px) {
+  .poolcontainer .poolfacts {
+    width: 100%;
+    float: none;
+    margin: 2% 5%; }
+
+  .poolcontainer .poolimgsolo {
+    margin: 0% 2.5% 0% 5%;
+    width: 100%;
+    float: none; } }
 @media (min-width: 481px) and (max-width: 780px) {
   .poolcontainer .poolfacts {
-    width: 90%;
+    width: 100%;
     float: none;
-    margin: 10% 5%; }
+    margin: 7.5%, 5%; }
 
   .poolcontainer .poolimgsolo {
     margin: 0% 2.5% 0% 5%;
@@ -323,7 +320,7 @@
   .poolcontainer .poolfacts {
     width: 100%;
     float: none;
-    margin: 15% 5%; }
+    margin: 7.5% 5%; }
 
   .poolcontainer .poolimgsolo {
     margin: 0%;
@@ -471,6 +468,50 @@
     display: block; }
     #workouts .workoutcontainer div {
       width: 90%; } }
+body {
+  text-align: center; }
+
+.images {
+  width: 500px;
+  height: 350px;
+  overflow: hidden;
+  position: relative;
+  margin: 20px auto; }
+
+.images img {
+  width: 500px;
+  height: 350px;
+  position: absolute;
+  top: 0;
+  left: -500px;
+  z-index: 1;
+  opacity: 0;
+  transition: all linear .5s;
+  -o-transition: all linear .5s;
+  -moz-transition: all linear .5s;
+  -webkit-transition: all linear .5s; }
+
+.images img:target {
+  left: 0;
+  z-index: 9;
+  opacity: 1; }
+
+.images img:first-child {
+  left: 0;
+  opacity: 1; }
+
+.slider a {
+  text-decoration: none;
+  background: #E3F1FA;
+  border: 1px solid #4da6fa;
+  border-radius: 60px;
+  padding: .5px 9px;
+  margin: 5px;
+  color: #222; }
+
+.slider a:hover {
+  background: #4da6fa; }
+
 h1, h2, h3 {
   font-family: "Oswald", sans-serif;
   color: #333333;
