--- a/stylesheets/partials/_poolsolo.scss
+++ b/stylesheets/partials/_poolsolo.scss
@@ -23,19 +23,7 @@ width: 100%;}
   padding: 5% 0%;
   border-bottom: 1px solid grey;
 
-  .bxslider {
-    margin: 0% 25% 0% 10%;
-    padding: 0% 10% 0% 5%;
-    li {margin: 0px 10px;}
-    img{
-    max-height: 300px;
 
-  }
-  }
-  .bx-pager {
-    margin-right: 50px;
-    height: 100px;
-  }
   .poolimgsolo {
     float: left;
     width: 45%;
@@ -92,7 +80,7 @@ width: 100%;}
   }
   .poolfacts {
     width:45%;
-    float: left;
+    float: right;
     padding-right: 2.5%;
 
   a{
@@ -108,19 +96,16 @@ width: 100%;}
     clear:both;
   }
 .pooltext h2 {
-  margin-top: 0px;
+  margin: 20px 0px 10px;
 }
   .pooltext {
+    margin: 2.5% 5% 0% 2.5%;
       text-align: left;
     padding: 0 2.5%;}
-
-    p {padding: 0px;}
-    h2 {padding: 0px 0px 0px;
-}
 }
 
   .sharecontainer{
-    padding: 4% 2%;
+    padding-top: 5%;
 
     a.return {text-align: left; float: left;}
 
@@ -146,11 +131,23 @@ width: 100%;}
     }
   }
 }
+@media (min-width: 781px) and (max-width: 1100px) {
+  .poolcontainer .poolfacts {
+    width:100%;
+    float: none;
+    margin: 2% 5%;}
+
+  .poolcontainer .poolimgsolo {
+    margin: 0% 2.5% 0% 5%;
+    width:100%;
+    float: none;}
+
+}
 @media (min-width: 481px) and (max-width: 780px) {
   .poolcontainer .poolfacts {
-    width:90%;
+    width:100%;
     float: none;
-    margin: 10% 5%;}
+    margin: 7.5%, 5%;}
 
   .poolcontainer .poolimgsolo {
     margin: 0% 2.5% 0% 5%;
@@ -162,7 +159,7 @@ width: 100%;}
   .poolcontainer .poolfacts {
     width:100%;
     float: none;
-    margin: 15% 5%;}
+    margin: 7.5% 5%;}
 
   .poolcontainer .poolimgsolo {
     margin: 0%;
