--- a/stylesheets/partials/_practice.scss
+++ b/stylesheets/partials/_practice.scss
@@ -1,67 +1,47 @@
-
-
-#slider {
-  position: relative;
-  overflow: hidden;
-  margin: 20px auto 0 auto;
-  border-radius: 4px;
-}
-
-#slider ul {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  height: 200px;
-  list-style: none;
-}
-
-#slider ul li {
-  position: relative;
-  display: block;
-  float: left;
-  margin: 0;
-  padding: 0;
+body {
+    text-align: center;
+  }
+.images {
   width: 500px;
-  height: 300px;
-  background: #ccc;
-  text-align: center;
-  line-height: 300px;
-}
-
-a.control_prev, a.control_next {
-  position: absolute;
-  top: 40%;
-  z-index: 999;
-  display: block;
-  padding: 4% 3%;
-  width: auto;
-  height: auto;
-  background: #2a2a2a;
-  color: #fff;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 18px;
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-a.control_prev:hover, a.control_next:hover {
-  opacity: 1;
-  -webkit-transition: all 0.2s ease;
-}
-
-a.control_prev {
-  border-radius: 0 2px 2px 0;
-}
-
-a.control_next {
-  right: 0;
-  border-radius: 2px 0 0 2px;
-}
-
-.slider_option {
+  height: 350px;
+  overflow: hidden;
   position: relative;
-  margin: 10px auto;
-  width: 160px;
-  font-size: 18px;
+
+  margin: 20px auto;
+}
+.images img {
+  width: 500px;
+	height:350px;
+
+  position: absolute;
+  top: 0;
+  left: -500px;
+  z-index: 1;
+  opacity: 0;
+
+  transition: all linear .5s;
+  -o-transition: all linear .5s;
+  -moz-transition: all linear .5s;
+  -webkit-transition: all linear .5s;
+}
+.images img:target {
+  left: 0;
+  z-index: 9;
+  opacity: 1;
+}
+.images img:first-child {
+  left: 0;
+  opacity: 1;
+}
+.slider a {
+  text-decoration: none;
+  background: #E3F1FA;
+  border: 1px solid #4da6fa;
+	border-radius: 60px;
+  padding:.5px 9px;
+	margin: 5px;
+  color: #222;
+}
+.slider a:hover {
+  background: #4da6fa;
 }
