--- a/stylesheets/partials/_poolsolo.scss
+++ b/stylesheets/partials/_poolsolo.scss
@@ -29,6 +29,55 @@ width: 100%;}
     width: 45%;
     margin: 0% 2.5%;
 }
+
+body {
+    text-align: center;
+  }
+.images {
+  width: 500px;
+  height: 350px;
+  overflow: hidden;
+  position: relative;
+
+  margin: 20px auto;
+}
+.images img {
+  width: 500px;
+	height:350px;
+
+  position: absolute;
+  top: 0;
+  left: -500px;
+  z-index: 1;
+  opacity: 0;
+
+  transition: all linear .5s;
+  -o-transition: all linear .5s;
+  -moz-transition: all linear .5s;
+  -webkit-transition: all linear .5s;
+}
+.images img:target {
+  left: 0;
+  z-index: 9;
+  opacity: 1;
+}
+.images img:first-child {
+  left: 0;
+  opacity: 1;
+}
+.slider a {
+  text-decoration: none;
+  background: #E3F1FA;
+  border: 1px solid #4da6fa;
+	border-radius: 60px;
+  padding:.5px 9px;
+	margin: 5px;
+  color: #222;
+}
+.slider a:hover {
+  background: #4da6fa;
+}
+
   .ac-container{
   	max-width: 200px;
   	text-align: left;
