--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -218,6 +218,43 @@
     float: left;
     width: 45%;
     margin: 0% 2.5%; }
+  .poolcontainer body {
+    text-align: center; }
+  .poolcontainer .images {
+    width: 500px;
+    height: 350px;
+    overflow: hidden;
+    position: relative;
+    margin: 20px auto; }
+  .poolcontainer .images img {
+    width: 500px;
+    height: 350px;
+    position: absolute;
+    top: 0;
+    left: -500px;
+    z-index: 1;
+    opacity: 0;
+    transition: all linear .5s;
+    -o-transition: all linear .5s;
+    -moz-transition: all linear .5s;
+    -webkit-transition: all linear .5s; }
+  .poolcontainer .images img:target {
+    left: 0;
+    z-index: 9;
+    opacity: 1; }
+  .poolcontainer .images img:first-child {
+    left: 0;
+    opacity: 1; }
+  .poolcontainer .slider a {
+    text-decoration: none;
+    background: #E3F1FA;
+    border: 1px solid #4da6fa;
+    border-radius: 60px;
+    padding: .5px 9px;
+    margin: 5px;
+    color: #222; }
+  .poolcontainer .slider a:hover {
+    background: #4da6fa; }
   .poolcontainer .ac-container {
     max-width: 200px;
     text-align: left;
@@ -626,7 +663,7 @@ nav {
     text-align: center; }
   .homepage .heromain {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    background-image: url("../images/bsprings.jpg");
+    background-image: url("../images/Balcones.jpg");
     background-position: 25% 70%;
     background-size: cover;
     height: 800px;
@@ -750,6 +787,7 @@ nav {
       .homepage #training .trainingcontainer .trainingimg:hover {
         transform: scale(1.2); }
       .homepage #training .trainingcontainer img {
+        padding: 10px 50px 0px;
         height: 90px; }
       .homepage #training .trainingcontainer ul {
         list-style: none;
