--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -148,7 +148,7 @@ text-align: center;
 
 .heromain {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-image: url("../images/bsprings.jpg");
+  background-image: url("../images/Balcones.jpg");
   background-position: 25% 70%;
   background-size:cover;
   height: 800px;
@@ -306,6 +306,8 @@ padding: 25px 50px 50px;
       transform: scale(1.2);
     }
       img {
+        padding: 10px 50px 0px;
+
         height: 90px;
       }
       text-align: center;
