--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -148,10 +148,10 @@ text-align: center;
 
 .heromain {
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  background-image: url("../images/Balcones.jpg");
+  background-image: url("../images/bsprings.jpg");
   background-position: 25% 70%;
   background-size:cover;
-  height: 800px;
+  height: 600px;
   text-align: center;
   padding: 150px 50px;
 
